--- a/doc/org-manual.org
+++ b/doc/org-manual.org
@@ -14230,12 +14230,13 @@ general options (see [[*Export Settings]]).
   #+vindex: org-latex-language-alist
   #+vindex: org-export-default-language
 
-  Language code of the primary document language.  When =LANGUAGE=
-  keyword is not specified use the value of
-  ~org-export-default-language~ (by default - =en=, American English)
+  List of languages in the document. The first language is the main
+  language in the document. If this keyword is not specified, use a
+  one-element list with the value of ~org-export-default-language~ (by
+  default - =en=, American English)
 
-  The list of language codes supported by Org is stored in the
-  variable ~org-latex-language-alist~.
+  The language codes supported by Org is stored in the variable
+  ~org-latex-language-alist~.
 
 - =LATEX_MULTI_LANG= ::
 
